//
//  AuthViewController.swift
//  GBShop
//
//  Created by Tatiana Tsygankova on 07/07/2019.
//  Copyright © 2019 Tatiana Tsygankova. All rights reserved.
//

import UIKit
import Firebase

class AuthViewController: UIViewController, Scrollable {
    
    @IBOutlet weak var activityIndicator: UIActivityIndicatorView!
    
    @IBOutlet weak var userNameTextField: UITextField!
    
    @IBOutlet weak var passwordTextField: UITextField!
    
    @IBOutlet weak var scrollView: UIScrollView!
    
    @IBOutlet weak var loginButton: UIButton!
    
    @IBOutlet weak var logoutButton: UIButton!
    
    @IBAction func onLoginButtonTap(_ sender: Any) {
        
        guard let userName = userNameTextField.text, !userName.isEmpty,
        let password = passwordTextField.text, !password.isEmpty else {
            self.showAlert(error: "User name or password is wrong")
            return
        }
        self.activityIndicator.isHidden = false
        self.activityIndicator.startAnimating()
        let auth = NetworkService.instance.requestFactory.makeAuthRequestFactory()
        auth.login(userName: userName, password: password) { response in
            self.activityIndicator.isHidden = true
            self.activityIndicator.stopAnimating()
            switch response.result {
            case .success(let login):
                print(login)
                if login.result == 1 {
                    self.hideKeyboard()
                    UserDefaults.instance.user = login.user
                    Analytics.logEvent("Login", parameters: nil)
                    self.navigationController?.pushViewController(self.createTabBarController(), animated: true)
                } else {
                    Analytics.logEvent("Login Error", parameters: nil)
                    self.showAlert(error: login.errorMessage ?? "Error")
                }
            case .failure(let error):
                Analytics.logEvent("Login Error", parameters: nil)
                self.showAlert(error: error.localizedDescription)
            }
        }
    }
    
    private func createTabBarController() -> UITabBarController {
        let tabBarController = UITabBarController()
        let productsTableViewController = ProductsTableViewController()
        productsTableViewController.tabBarItem = UITabBarItem(title: "Products", image: nil, tag: 0)
        tabBarController.addChild(productsTableViewController)
        
        let basketViewController = BasketTableController()
        basketViewController.tabBarItem = UITabBarItem(title: "Basket", image: nil, tag: 1)
        tabBarController.addChild(basketViewController)
        
        let userInfoViewController = UserInfoViewController()
        userInfoViewController.tabBarItem = UITabBarItem(title: "Profile", image: nil, tag: 2)
        tabBarController.addChild(userInfoViewController)
        
        return tabBarController
    }
    
    @IBAction func onSignUpButtonTap(_ sender: Any) {
        UserDefaults.instance.user = User()
        self.navigationController?.pushViewController(SignUpViewController(), animated: true)
    }
    
    
    @IBAction func onLogoutButtonTap(_ sender: Any) {
        guard let userId = UserDefaults.instance.user?.id else {
            return
        }
        let logOut = NetworkService.instance.requestFactory.makeLogOutRequestFactory()
        logOut.logOut(userId: userId) { response in
            switch response.result {
            case .success(let value):
                if value.result == 1 {
                    Analytics.logEvent("Logout", parameters: nil)
                    self.showAlert(title: "Attention", message: "Goodbye!")
                    DispatchQueue.main.asyncAfter(deadline: .now() + 1.0) {
                        UIApplication.shared.perform(#selector(NSXPCConnection.suspend))
                        DispatchQueue.main.asyncAfter(deadline: .now() + 0.5) {
                            exit(0)
                        }
                    }
                } else {
                    self.showAlert(error: value.errorMessage ?? "")
                }
                
            case .failure(let error):
                self.showAlert(error: error.localizedDescription)
            }
        }
    }
    
    init() {
        super.init(nibName: "AuthViewController", bundle: nil)
    }
    
    required init?(coder aDecoder: NSCoder) {
        super.init(coder: aDecoder)
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.navigationItem.title = "Login"
        self.userNameTextField.accessibilityIdentifier = "AuthUserName"
        self.passwordTextField.accessibilityIdentifier = "AuthPassword"
        self.loginButton.accessibilityIdentifier = "AuthLogin"
        
        self.activityIndicator.isHidden = true
        let hideKeyboardGesture = UITapGestureRecognizer(target: self, action: #selector(hideKeyboard))
        self.view.addGestureRecognizer(hideKeyboardGesture)

    }

    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        
        if UserDefaults.instance.user != nil {
            self.logoutButton.isEnabled = true
        }
        
        NotificationCenter.default.addObserver(self, selector: #selector(self.keyBoardWasShown), name: UIResponder.keyboardWillShowNotification, object: nil)
        
        NotificationCenter.default.addObserver(self, selector: #selector(self.keyBoardWillBeHidden), name: UIResponder.keyboardWillHideNotification, object: nil)
    }
    
    @objc func keyBoardWasShown(notification: Notification) {
        keyBoardWasShown(notification: notification, scrollView: scrollView)
    }
    
    @objc func keyBoardWillBeHidden(notification: Notification) {
        
        keyBoardWillBeHidden(notification: notification, scrollView: scrollView)
    }
    
    @objc func hideKeyboard() {
        hideKeyboard(scrollView: scrollView)
    }

}
