...
    /// Выводитокно с ошибкой
    ///
    /// - Parameter error: ошибка
    func showAlert(error: Error) {
        let alertVC = UIAlertController(title: "Error", message: error.localizedDescription, preferredStyle: .alert)
        
        alertVC.addAction(UIAlertAction(title: "Ok", style: .cancel, handler: nil))
        present(alertVC, animated: true, completion: nil)
    }
    
    /// Выводит окно с ошибкой
    ///
    /// - Parameter error: строка с ошибкой
...
